--- a/about.html
+++ b/about.html
@@ -3,7 +3,15 @@
   <head>
     <title>About - Flip Six Three Hole Games</title>
     <meta charset="utf-8">
+    
+    <!-- Favicon     -->
     <link rel="icon" href="favicons/favicon.ico">
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/10ef6c0c6f.js" crossorigin="anonymous"></script>
+
+    <!-- Stylesheets -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
@@ -89,26 +97,29 @@
       <nav class="linklist">
         <div class="listgroups">
           <ul class="nobull">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="jobs.html">Jobs</a></li>
+            <li><a href="index.html"><i class="social-icon fa-solid fa-house"></i> Home</a></li>
+            <li><a href="about.html"><i class="social-icon fa-solid fa-circle-info"></i> About</a></li>
+            <li><a href="jobs.html"><i class="social-icon fa-solid fa-briefcase"></i> Jobs</a></li>
           </ul>
         </div>
         <div class="listgroups">
           <ul class="nobull">
-            <li><a href="https://twitter.com/flip63holegames" target="_blank">Twitter</a></li>
-            <li><a href="https://www.facebook.com/flipsixthreeholegames" target="_blank">Facebook</a></li>
-            <li><a href="" target="_blank">Instagram</a></li>
+            <li><a href="https://twitter.com/flip63holegames" target="_blank"><i class="social-icon fa-brands fa-twitter"></i> Twitter</a></li>
+            <li><a href="https://www.facebook.com/flipsixthreeholegames" target="_blank"><i class="social-icon fa-brands fa-facebook"></i> Facebook</a></li>
+            <li><a href="" target="_blank"><i class="social-icon fa-brands fa-instagram"></i> Instagram</a></li>
           </ul>
         </div>
         <div class="listgroups">
           <ul class="nobull">
-            <li><a href="mailto:flipsixthreeholegames@gmail.com" target="_blank">Contact</a></li>
-            <li><a href="" target="_blank">Discord</a></li>
-            <li><a href="" target="_blank">Twitch</a></li>
+            <li><a href="mailto:flipsixthreeholegames@gmail.com" target="_blank"><i class="social-icon fa-solid fa-envelope"></i> Contact</a></li>
+            <li><a href="" target="_blank"><i class="social-icon fa-brands fa-discord"></i> Discord</a></li>
+            <li><a href="" target="_blank"><i class="social-icon fa-brands fa-twitch"></i> Twitch</a></li>
           </ul>
         </div>
       </nav>
     </footer>
+    
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
