Change footer button order and make discord button invisible

--- a/about.html
+++ b/about.html
@@ -112,8 +112,8 @@
         <div class="listgroups">
           <ul class="nobull">
             <li><a href="mailto:flipsixthreeholegames@gmail.com" target="_blank"><i class="social-icon fa-solid fa-envelope"></i> Contact</a></li>
-            <li><a href="" target="_blank"><i class="social-icon fa-brands fa-discord"></i> Discord</a></li>
             <li><a href="" target="_blank"><i class="social-icon fa-brands fa-twitch"></i> Twitch</a></li>
+            <li class="invisible"><a href="" target="_blank"><i class="social-icon fa-brands fa-discord"></i> Discord</a></li>
           </ul>
         </div>
       </nav>
