Change carousel to crossfade

--- a/ai_office_escape.html
+++ b/ai_office_escape.html
@@ -55,7 +55,7 @@
       </p>
       <div class="game-images-container">
         <h2>Images</h2>
-        <div id="game-carousel" class="game-images carousel slide" data-bs-interval="false" data-bs-ride="carousel">
+        <div id="game-carousel" class="game-images carousel slide carousel-fade" data-bs-interval="false" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="images/art/AIOfficeEscape/2022-05-18_Office_BreakRoom.png" class="game-image d-block w-100" alt="">
