--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="banner-container-border">
         <div class="banner-container">
           <a href="ai_office_escape.html"><video autoplay loop muted>
-            <source src="videos/Building_Escape - Unreal Editor 2021-09-11 22-14-59.mp4" type="video/mp4">
+            <source src="videos/AIOfficeEscape - Unreal Editor 2022-07-16 18-51-36.mp4" type="video/mp4">
           </video></a>
           <img class="border-img bottomleft corner" src="images/borders/AIOfficeEscape_UI_Border_Corner_V2_bottomleft.png">
           <img class="border-img bottomright corner" src="images/borders/AIOfficeEscape_UI_Border_Corner_V2_bottomright.png">
