--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <!-- Stylesheets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet">
+
+    <!-- Scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
   </head>
   <body>
     <img class="border-img bottomleft corner" src="images/borders/AIOfficeEscape_UI_Border_Corner_V2_bottomleft.png">
@@ -23,77 +27,107 @@
     <img class="border-img rightside sides" src="images/borders/AIOfficeEscape_UI_Border_Side_V2_4x4_sides.png">
     <img class="border-img top" src="images/borders/AIOfficeEscape_UI_Border_Side_V2_4x4_topbottom.png">
     <img class="border-img bottom" src="images/borders/AIOfficeEscape_UI_Border_Side_V2_4x4_topbottom.png">
-    <header>
-      <nav class="banner-menu">
-        <ul class="nobull banner-links">
-          <li><a class="banner-links-text" href="about.html">About</a></li>
-          <li><a href="index.html"><img class="logo" src="images/logos/Logo 170-170.png"></a></li>
-          <li><a class="banner-links-text" href="news.html">News</a></li>
-        </ul>
-      </nav>
-      <div class="banner-container-border">
-        <div class="banner-container">
-          <a href="ai_office_escape.html"><video autoplay loop muted>
-            <source src="videos/AIOfficeEscape - Unreal Editor 2022-07-16 18-51-36.mp4" type="video/mp4">
-          </video></a>
-          <img class="border-img bottomleft corner" src="images/borders/AIOfficeEscape_UI_Border_Corner_V2_bottomleft.png">
-          <img class="border-img bottomright corner" src="images/borders/AIOfficeEscape_UI_Border_Corner_V2_bottomright.png">
-          <img class="border-img topleft corner" src="images/borders/AIOfficeEscape_UI_Border_Corner_V2_topleft.png">
-          <img class="border-img topright corner" src="images/borders/AIOfficeEscape_UI_Border_Corner_V2_topright.png">
-          <img class="border-img leftside sides" src="images/borders/AIOfficeEscape_UI_Border_Side_V2_4x4_sides.png">
-          <img class="border-img rightside sides" src="images/borders/AIOfficeEscape_UI_Border_Side_V2_4x4_sides.png">
-          <img class="border-img top" src="images/borders/AIOfficeEscape_UI_Border_Side_V2_4x4_topbottom.png">
-          <img class="border-img bottom" src="images/borders/AIOfficeEscape_UI_Border_Side_V2_4x4_topbottom.png">
+    
+    <div class="blur-container">
+      <header>
+        <nav class="banner-menu">
+          <ul class="nobull banner-links">
+            <li><a class="banner-links-text" href="about.html">About</a></li>
+            <li><a href="index.html"><img class="logo" src="images/logos/Logo 170-170.png"></a></li>
+            <li><a class="banner-links-text" href="news.html">News</a></li>
+          </ul>
+        </nav>
+        <div class="banner-container-border">
+          <div class="banner-container">
+            <a href="ai_office_escape.html"><video autoplay loop muted>
+              <source src="videos/AIOfficeEscape - Unreal Editor 2022-07-16 18-51-36.mp4" type="video/mp4">
+            </video></a>
+            <img class="border-img bottomleft corner" src="images/borders/AIOfficeEscape_UI_Border_Corner_V2_bottomleft.png">
+            <img class="border-img bottomright corner" src="images/borders/AIOfficeEscape_UI_Border_Corner_V2_bottomright.png">
+            <img class="border-img topleft corner" src="images/borders/AIOfficeEscape_UI_Border_Corner_V2_topleft.png">
+            <img class="border-img topright corner" src="images/borders/AIOfficeEscape_UI_Border_Corner_V2_topright.png">
+            <img class="border-img leftside sides" src="images/borders/AIOfficeEscape_UI_Border_Side_V2_4x4_sides.png">
+            <img class="border-img rightside sides" src="images/borders/AIOfficeEscape_UI_Border_Side_V2_4x4_sides.png">
+            <img class="border-img top" src="images/borders/AIOfficeEscape_UI_Border_Side_V2_4x4_topbottom.png">
+            <img class="border-img bottom" src="images/borders/AIOfficeEscape_UI_Border_Side_V2_4x4_topbottom.png">
+          </div>
+        </div>
+      </header>
+      <div class="content">
+        <h1>Life is meant to be Enjoyed.</h1>
+        <br>
+        <p class="introduction">Flip Six Three Hole games is a Vancouver Island, B.C. based independent game developer. We strive to create games with exceptionally fun and enjoyable gameplay.
+          Our first game is a multi-platform puzzle game called **AIOfficeEscape**. As a developer, we aim to release the best product we can make, utilizing our passion to create
+          games that we ourselves want to play.<br><br>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+      <footer>
+        <nav class="linklist">
+          <div class="listgroups">
+            <ul class="nobull">
+              <li><a href="index.html"><i class="social-icon fa-solid fa-house"></i> Home</a></li>
+              <li><a href="about.html"><i class="social-icon fa-solid fa-circle-info"></i> About</a></li>
+              <li><a href="jobs.html"><i class="social-icon fa-solid fa-briefcase"></i> Jobs</a></li>
+            </ul>
+          </div>
+          <div class="listgroups">
+            <ul class="nobull">
+              <li><a href="https://twitter.com/flip63holegames" target="_blank"><i class="social-icon fa-brands fa-twitter"></i> Twitter</a></li>
+              <li><a href="https://www.facebook.com/flipsixthreeholegames" target="_blank"><i class="social-icon fa-brands fa-facebook"></i> Facebook</a></li>
+              <li><a href="" target="_blank"><i class="social-icon fa-brands fa-instagram"></i> Instagram</a></li>
+            </ul>
+          </div>
+          <div class="listgroups">
+            <ul class="nobull">
+              <li><button class="contact-btn"><i class="social-icon fa-solid fa-envelope"></i> Contact</button></li>
+              <li><a href="" target="_blank"><i class="social-icon fa-brands fa-twitch"></i> Twitch</a></li>
+              <li class="invisible"><a href="" target="_blank"><i class="social-icon fa-brands fa-discord"></i> Discord</a></li>
+            </ul>
+          </div>
+        </nav>
+      </footer>
+    </div>
+
+    <div class="alert-container invisible">
+
+      <div class="alert">
+        <div class="alert-banner">
+  
+        </div>
+  
+        <div class="alert-content">
+          <h3>Contact us</h3>
+
+          <form class="contact-form">
+            <label for="contact-name">Name:</label><br>
+            <input type="text" id="contact-name" name="contact-name"><br>
+            <label for="contact-email">Email:</label><br>
+            <input type="email" id="contact-email" name="contact-email"><br>
+            <label for="contact-message">Message:</label><br>
+            <textarea id="contact-message" name="contact-message" rows="5" cols="40"></textarea>
+            <input class="contact-btn" type="submit" value="Send">
+            <button class="contact-btn">Cancel</button>
+          </form>
+
         </div>
       </div>
-    </header>
-    <div class="content">
-      <h1>Life is meant to be Enjoyed.</h1>
-      <br>
-      <p class="introduction">Flip Six Three Hole games is a Vancouver Island, B.C. based independent game developer. We strive to create games with exceptionally fun and enjoyable gameplay.
-        Our first game is a multi-platform puzzle game called **AIOfficeEscape**. As a developer, we aim to release the best product we can make, utilizing our passion to create
-        games that we ourselves want to play.<br><br>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><br>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+  
     </div>
-    <footer>
-      <nav class="linklist">
-        <div class="listgroups">
-          <ul class="nobull">
-            <li><a href="index.html"><i class="social-icon fa-solid fa-house"></i> Home</a></li>
-            <li><a href="about.html"><i class="social-icon fa-solid fa-circle-info"></i> About</a></li>
-            <li><a href="jobs.html"><i class="social-icon fa-solid fa-briefcase"></i> Jobs</a></li>
-          </ul>
-        </div>
-        <div class="listgroups">
-          <ul class="nobull">
-            <li><a href="https://twitter.com/flip63holegames" target="_blank"><i class="social-icon fa-brands fa-twitter"></i> Twitter</a></li>
-            <li><a href="https://www.facebook.com/flipsixthreeholegames" target="_blank"><i class="social-icon fa-brands fa-facebook"></i> Facebook</a></li>
-            <li><a href="" target="_blank"><i class="social-icon fa-brands fa-instagram"></i> Instagram</a></li>
-          </ul>
-        </div>
-        <div class="listgroups">
-          <ul class="nobull">
-            <li><a href="mailto:flipsixthreeholegames@gmail.com" target="_blank"><i class="social-icon fa-solid fa-envelope"></i> Contact</a></li>
-            <li><a href="" target="_blank"><i class="social-icon fa-brands fa-twitch"></i> Twitch</a></li>
-            <li class="invisible"><a href="" target="_blank"><i class="social-icon fa-brands fa-discord"></i> Discord</a></li>
-          </ul>
-        </div>
-      </nav>
-    </footer>
 
     <!-- Scripts -->
+    <script src="javascript/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
