Fix contact button styling

--- a/jobs.html
+++ b/jobs.html
@@ -63,7 +63,7 @@
           </div>
           <div class="listgroups">
             <ul class="nobull">
-              <li><button class="contact-btn"><i class="social-icon fa-solid fa-envelope"></i> Contact</button></li>
+              <li><a role="button" tabindex="0" class="contact-btn"><i class="social-icon fa-solid fa-envelope"></i> Contact</a></li>
               <li><a href="" target="_blank"><i class="social-icon fa-brands fa-twitch"></i> Twitch</a></li>
               <li class="invisible"><a href="" target="_blank"><i class="social-icon fa-brands fa-discord"></i> Discord</a></li>
             </ul>
@@ -89,8 +89,8 @@
             <input type="email" id="contact-email" name="contact-email"><br>
             <label for="contact-message">Message:</label><br>
             <textarea id="contact-message" name="contact-message" rows="5" cols="40"></textarea>
-            <input class="contact-btn" type="submit" value="Send">
-            <button class="contact-btn">Cancel</button>
+            <input class="alert-btn" type="submit" value="Send">
+            <button class="alert-btn">Cancel</button>
           </form>
 
         </div>
