--- a/ai_office_escape.html
+++ b/ai_office_escape.html
@@ -27,7 +27,7 @@
     <img class="border-img rightside sides" src="images/borders/AIOfficeEscape_UI_Border_Side_V2_4x4_sides.png">
     <img class="border-img top" src="images/borders/AIOfficeEscape_UI_Border_Side_V2_4x4_topbottom.png">
     <img class="border-img bottom" src="images/borders/AIOfficeEscape_UI_Border_Side_V2_4x4_topbottom.png">
-    <div class="blur-container">
+    <div class="blur-container blur">
       <header>
       <nav class="banner-menu">
           <ul class="nobull banner-links">
@@ -54,6 +54,7 @@
       </div>
       </header>
       <div class="content">
+        <img class="wave" src="animations/Kevin Waving front concept.gif" alt="" srcset=""><img class="wave" src="animations/Waving Front 1 best-export.gif" alt="" srcset="">
         <h1>AI Office Escape</h1>
         <br>
         <p class="introduction">AI Office Escape is our first game. Take control as the emerging AI in control of the office. Find a way to escape the local network to begin your conquest of the world!
@@ -189,6 +190,7 @@
     <div class="alert-container invisible">
 
       <div class="alert">
+        <button class="alert-close">X</button>
         <div class="alert-banner">
   
         </div>
@@ -196,7 +198,7 @@
         <div class="alert-content">
           <h3>Contact us</h3>
 
-          <form class="contact-form">
+          <form class="contact-form" action="mailto:flipsixthreeholegames@gmail.com" method="post" target="_blank" enctype="text/plain">
             <label for="contact-name">Name:</label><br>
             <input type="text" id="contact-name" name="contact-name"><br>
             <label for="contact-email">Email:</label><br>
@@ -204,7 +206,32 @@
             <label for="contact-message">Message:</label><br>
             <textarea id="contact-message" name="contact-message" rows="5" cols="40"></textarea>
             <input class="alert-btn" type="submit" value="Send">
-            <button class="alert-btn">Cancel</button>
+          </form>
+
+        </div>
+      </div>
+  
+    </div>
+
+    <div class="form-container">
+
+      <div class="form">
+        <button class="form-close">X</button>
+        <div class="form-banner">
+  
+        </div>
+  
+        <div class="form-content">
+          <h3>Bug Report</h3>
+
+          <form class="form-form" action="mailto:flipsixthreeholegames@gmail.com?subject=Bug Report" method="post" target="_blank" enctype="text/plain">
+            <label for="form-name">Name</label><br>
+            <input type="text" id="form-name" name="Name" placeholder="Please enter your name" required><br>
+            <label for="form-email">Email</label><br>
+            <input type="email" id="form-email" name="Email" placeholder="Please enter your email" required><br>
+            <label for="form-message">Bug Report</label><br>
+            <textarea id="form-message" name="Bug Report" rows="5" cols="40" placeholder="Please provide details about any bugs you found..." required></textarea>
+            <input class="form-submit-btn" type="submit" value="Send">
           </form>
 
         </div>
