--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     <div class="alert-container invisible">
 
       <div class="alert">
+        <button class="alert-close">X</button>
         <div class="alert-banner">
   
         </div>
@@ -110,7 +111,7 @@
         <div class="alert-content">
           <h3>Contact us</h3>
 
-          <form class="contact-form">
+          <form class="contact-form" action="mailto:flipsixthreeholegames@gmail.com" method="post" target="_blank" enctype="text/plain">
             <label for="contact-name">Name:</label><br>
             <input type="text" id="contact-name" name="contact-name"><br>
             <label for="contact-email">Email:</label><br>
@@ -118,7 +119,6 @@
             <label for="contact-message">Message:</label><br>
             <textarea id="contact-message" name="contact-message" rows="5" cols="40"></textarea>
             <input class="alert-btn" type="submit" value="Send">
-            <button class="alert-btn">Cancel</button>
           </form>
 
         </div>
