Add bug report button and functionality

--- a/ai_office_escape.html
+++ b/ai_office_escape.html
@@ -27,7 +27,7 @@
     <img class="border-img rightside sides" src="images/borders/AIOfficeEscape_UI_Border_Side_V2_4x4_sides.png">
     <img class="border-img top" src="images/borders/AIOfficeEscape_UI_Border_Side_V2_4x4_topbottom.png">
     <img class="border-img bottom" src="images/borders/AIOfficeEscape_UI_Border_Side_V2_4x4_topbottom.png">
-    <div class="blur-container blur">
+    <div class="blur-container">
       <header>
       <nav class="banner-menu">
           <ul class="nobull banner-links">
@@ -54,6 +54,7 @@
       </div>
       </header>
       <div class="content">
+        <button class="bug-alert">Find a Bug?</button>
         <img class="wave" src="animations/Kevin Waving front concept.gif" alt="" srcset=""><img class="wave" src="animations/Waving Front 1 best-export.gif" alt="" srcset="">
         <h1>AI Office Escape</h1>
         <br>
@@ -213,7 +214,7 @@
   
     </div>
 
-    <div class="form-container">
+    <div class="form-container invisible">
 
       <div class="form">
         <button class="form-close">X</button>
